# Overcooked-1

./: README.md  animation couteau  main.c  niveau1
1 assemblage scene/: main.c  menu.c  menu.h
EcranFin/: main.c
Parametres/: CMakeLists.txt  main.c
Sons/: main.c
manette/: main.c
menu/: main.c  menu.c  menu.h
newTimer/: main.c
overcooked/: clients.c  clients.h  deplace.c  deplace.h  main.c  plat .c  saisir.c  score.c  score.h  setup.c  setup.h
saisir les pseudos/: clients.c  clients.h  main.c  plat .c  plat.h  saisir.c  saisir.h
test2/: CMakeLists.txt  background.c  background.h  clients.c  clients.h  commandes.c  commandes.h  deplace.c  deplace.h  initiaallegro.c  initiaallegro.h  main.c  menu.c  menu.h  musique.c  musique.h  nv1.c  nv1.h  parametreson.c  parametreson.h  plat.c  plat.h  saisirpseudo.c  saisirpseudo.h  score.c  score.h  setup.c  setup.h
timer/: main.c
untitled4/: Animation.c  Animation.h
